# Copyright 2024 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "libslirp-rs"
version = "0.1.0"
edition = "2021"
##build = "build_cargo.rs"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib","lib"]
doctest = false

[dependencies]
bytes = { version = "1.4.0" }
http-proxy = { path = "../http-proxy" }
libc = "0.2"
log = "0.4.17"
winapi = { version = "0.3", features = ["winsock2"] }

[build-dependencies]
##bindgen = "0.69.4"
