[package]
name = "netsim-cli"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]
doctest = false
test = false

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
frontend-proto = { path = "../frontend-proto" }
frontend-client-cxx = { path = "../frontend-client-cxx" }
serde_json = "1.0"
