[package]
name = "netsim-cxx"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib", "lib"]
doctest = false
test = false

[dependencies]
cxx = { version = "=1.0.42", features = ["c++17"] }
frontend-proto = { path = "../frontend-proto" }
protobuf = "2.27.1"
regex = "1.6.0"

[build-dependencies]
cxx-build = "1.0.92"
